Fixed overflow again

--- a/custom.css
+++ b/custom.css
@@ -24,7 +24,7 @@
   nav.tabs article.tab form,
   nav.tabs article.tab form {
     margin: 0;
-    width: 90vw;
+    width: 87.5vw;
   }
 
   nav.tabs ul.horizontal.tabs > li > article.tab {
